package S2C;

enum Result {
	TRUE = 1;
	INVALID_ACCOUNT	= 2;
	UNDEFINED_FIELD	= 3;
	EXISTED_ACCOUNT	= 4;
	BLOCKED_ACCOUNT	= 5;
	DUPLICATED_LOGIN = 6;
	INVALID_CHARACTER = 7;
	INVALID_ASSISTANT = 8;
	INVALID_ITEM = 9;
	NOT_ENOUGH_HONEY = 10;
	NOT_ENOUGH_COIN = 11;
	NO_MATCH_WITH_DB = 12;
	INVALID_REQ_FIELD = 13;
	INVALID_BATON = 14;
	INVALID_BATON_RESULT = 15;
	INVALID_HONEY = 16;
	FULLY_UPGRADED = 17;
}

enum Update {
	SUCCESS = 1;
	FAIL = 2;
}

message SystemMessage {
	optional uint64 id = 1 [default=930151572];
	required Result res = 2;
} // end

message VersionInfoReply {
	optional uint64 id = 1 [default=212532706];
	required string version = 2;
} // end

message RegisterAccountReply {
	optional uint64 id = 1 [default=1622018505];
} // end

message SelectCharacterReply {
	optional uint64 id = 1 [default=1952577891];
} // end

message SelectAssistantReply {
	optional uint64 id = 1 [default=1952577891];
} // end

message StartGameReply {
	optional uint64 id = 1 [default=519762701];
	required int32 honey = 2;
	required int64 last_charged_time = 3;
} // end

message AccountInfo {
	optional uint64 id = 1 [default=74840653];
	required int32 coin = 2;
	required int32 mineral = 3;
	required int32 lv = 4;
	required int32 exp = 5;
	required int32 point = 6;
	required int32 honey = 7;
	required int64 last_charged_time = 8;
	required int32 selected_character = 9;
	required int32 selected_assistant = 10;
	required int32 honey_score = 11;
	required int32 honey_time = 12;
	required int32 cooldown = 13;
	required int32 exp_boost = 14;
	required int32 item_last = 15;
	required int32 max_attack = 16;
	required int32 random = 17;
	repeated CharacterInfo characters = 18;
	repeated AssistantInfo assistants = 19;

	enum ID {
		ONE = 1;
		TWO = 2;
		THREE = 3;
		FOUR = 4;
		FIVE = 5;
		SIX = 6;
		SEVEN = 7;
		EIGHT = 8;
		NINE = 9;
		TEN = 10;
	}

	message CharacterInfo{
		required ID id = 1;
		required int32 upgraded = 2;		
	}

	message AssistantInfo{
		required ID id = 1;
		required int32 upgraded = 2;
	}
} // end

message LogoutReply {
	optional uint64 id = 1 [default=64091022];
} // end

message ChargeInfo {
	optional uint64 id = 1 [default=7663927];
	required int32 honey = 2;
	required int64 last_charged_time = 3;
} // end

message RankInfo {
	optional uint64 id = 1 [default=25751552];
	required int64 overall_ranking = 2;
	repeated FriendRankInfo ranking_list = 3;
	
	message FriendRankInfo {
		required string k_id = 1;
		required int32 score = 2;
		required int32 honey_sended = 3;
	}
} // end

message PostedHoney {
	optional uint64 id = 1 [default=92009206];
	repeated Honey honey = 2;

	message Honey {
		required string sender_k_id = 1;
		required int64 sended_time = 2;
	}
} // end

message PostedBaton {
	optional uint64 id = 1 [default=81000074];
	repeated Baton baton = 2;

	message Baton {
		required string sender_k_id = 1;
		required string map_name = 2;
		required int32 last_score = 3;
		required int64 sended_time = 4;
	}
} // end

message PostedBatonResult {
	optional uint64 id = 1 [default=642844433];
	repeated BatonResult baton_result = 2;
	
	message BatonResult {
		required string sender_k_id = 1;
		required int32 acquisition_score = 2;
		required int64 sended_time = 3;
	}
} // end

message GameResult {
	optional uint64 id = 1 [default=10876551];
	required int32 score = 2;
	required int32 coin = 3;
	required int32 bonus_score = 4;
	required int32 total_score = 5;
	required int32 level = 6;
	required int32 exp = 7;
	required int32 total_coin = 8;
} // end

message BuyItemReply {
	optional uint64 id = 1 [default=74117480];
	required Item item = 2;

	enum Item {
		EXP_BOOST = 1;
		LAST_ITEM = 2;
		MAX_ATTACK = 3;

		MAGNET = 21;
		COIN_TIME = 22;
		SCORE_BONUS = 23;
		HEALTH = 24;
		IMMORTAL = 25;
		COOL_DOWN = 26;
		HONEY_SCORE = 27;
		LAST_ACTION = 28;
		MAX = 29;
	}
} // end 

message BuyCharacterReply {
	optional uint64 id = 1 [default=2059273157];
	required Character character = 2;

	enum Character {
		ONE = 1;
		TWO = 2;
		THREE = 3;
		FOUR = 4;
		FIVE = 5;
		SIX = 6;
		SEVEN = 7;
		EIGHT = 8;
		NINE = 9;
		TEN = 10;
	}
} // end

message BuyAssistantReply {
	optional uint64 id = 1 [default=2059273358];
	required Assistant assistant = 2;

	enum Assistant {
		ONE = 1;
		TWO = 2;
		THREE = 3;
		FOUR = 4;
		FIVE = 5;
		SIX = 6;
		SEVEN = 7;
		EIGHT = 8;
		NINE = 9;
		TEN = 10;
	}
} // end

message SendHoneyReply {
	optional uint64 id = 1 [default=518193085];
} // end

message RequestBatonReply {
	optional uint64 id = 1 [default=1132791610];
	required int32 coin = 2;
} // end

message AcceptHoneyReply {
	optional uint64 id = 1 [default=510456537];
} // end

message AcceptBatonReply {
	optional uint64 id = 1 [default=807931012];
} // end

message BatonResult {
	optional uint64 id = 1 [default=7864253];
	required int32 coin = 2;
	required int32 total_coin = 3;
	required Update update = 4;
} // end

message AcceptBatonResultReply {
	optional uint64 id = 1 [default=1775630798];
	required Update update = 2;
	required int32 score = 3;
} // end

message UpgradeReply {
	optional uint64 id = 1 [default=97120694];
	required int32 coin = 2;
} // end
